Test_Files/abstract_vm/Error/format2.asm
;     Format 2
;   ============
;   Error test 4

push int64(8555555535)
push lol(16)
push lidl(42.42)
dump
exit
